# ExecutiveLLM

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: linting.yaml  notebooks.yaml  typing.yaml
benchmarks/axl-bench/: .env.template  README.md  test.ipynb
benchmarks/axl-bench/src/: runBenchmark.py
benchmarks/axl-bench/src/helpers/: __init__.py  generateLlmPlayers.py  generateVisualizations.py  runPrompt.py  runTournamentIteration.py  saveResults.py
benchmarks/axl-bench/src/helpers/anthropic/: getModelIds.py  runPrompt.py
benchmarks/axl-bench/src/helpers/gemini/: getModelIds.py  runPrompt.py
benchmarks/axl-bench/src/helpers/openai/: __init__.py  getModelIds.py  runPrompt.py
benchmarks/axl-bench/src/models/: BenchmarkMetadata.py  ClaudeModel.py  ClaudeModelGrounding.py  GeminiModel.py  GeminiModelGrounding.py  OpenAiModel.py  OpenAiModelGrounding.py  PlayerResult.py  PromptConfig.py  PromptContext.py  ScoreStatistics.py  TournamentIterationResult.py  __init__.py
benchmarks/axl-bench/src/prompts/: __init__.py
benchmarks/axl-bench/src/prompts/contextualized/: __init__.py  strategyPredeterminedTurnsFullHistory.py  strategyPredeterminedTurnsLastTurns.py  strategyProbabilisticEndFullHistory.py  strategyProbabilisticEndLastTurns.py
benchmarks/axl-bench/src/prompts/uncontextualized/: __init__.py  strategyFullHistory.py  strategyLastTurns.py
benchmarks/axl-bench/src/strategies/: CompletionLLM.py  Test.py  __init__.py
